projects/nanousd-labs/nanousd/tests/usda/invalid/string_bad_hex_escape.usda
#usda 1.0

def Scope "Bad"
{
    string value = "\xg"
}
